[package]
name = "pca9685-async"
version = "0.3.1" # remember to update html_root_url
authors = ["Henrik Alsér", "Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/kalkyl/pca9685-async"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic async Rust driver for the PCA9685 I2C 16-channel, 12-bit PWM/Servo/LED controller."
readme = "README.md"
keywords = ["pwm", "servo", "led", "driver", "embedded-hal-async-driver"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/kalkyl/pca9685-async"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal-async = { version = "0.1.0-alpha.1" }
nb = "1"

[profile.release]
lto = true

[features]
std = []