[package]
edition = "2021"
name = "embassy-rp-examples"
version = "0.1.0"


[dependencies]
embassy-sync = { version = "0.1.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "../../embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "../../embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
pca9685-async = { path = "../"}
pwm-pca9685 = "0.3.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }
embedded-io = { version = "0.3.0", features = ["async", "defmt"] }

[profile.release]
debug = true